----------------------------------------------------------------------
 OmegaT 2.0.0 update 1 Changes
----------------------------------------------------------------------
2.0.0 update 1 vs. 2.0.0

  5 Enhancements
  1 Bugfixe

----------------------------------------------------------------------
2.0.0 update 1

  Implemented requests:
  - Extra checks in TagValidator for PO linefeed
  http://sourceforge.net/support/tracker.php?aid=2371683
  
  - Extra check in TagValidator if printf variables in PO-file segments are correct
  http://sourceforge.net/support/tracker.php?aid=2371713
  
  - New English segmentation exceptions
  http://sourceforge.net/support/tracker.php?aid=1974262 

  - Fuzzy Glossary Matching
  http://sourceforge.net/support/tracker.php?aid=1374596  
  (Requires tokenizers from http://sourceforge.net/projects/omegat-plugins)

  Other enhancements:

  - The instant start is displayed correctly (right aligned) for RTL languages

  - OmegaT can use tokenizers to get stemming in fuzzy and glossary matches. 
  (Requires tokenizers from http://sourceforge.net/projects/omegat-plugins)

  - Japanese localisation updated to 2.0 (UI)
  - Basque localisation updated to 2.0 (UI)
  - Slovenian localisation updated to 2.0 (UI)
  
  Bugs fixes:
    
  - Spellcheck EN-US: incorrect handling of hyphenated compounds
  http://sourceforge.net/support/tracker.php?aid=1815736 
  (Requires tokenizers from http://sourceforge.net/projects/omegat-plugins)

----------------------------------------------------------------------
 OmegaT 2.0.0 Changes
----------------------------------------------------------------------
2.0.0 vs. 1.8.1 


  14 Enhancements
  0  Bugfix

----------------------------------------------------------------------
2.0.0 

  Implemented requests:
  
  - User-configurable keyboard shortcuts
  http://sourceforge.net/support/tracker.php?aid=1615400 

  - Shortcut for Reload/Close/Create translated documents