@@ -972,17 +972,13 @@ CORE_SRX_TABLE_COLUMN_Before_Break=Pattern Before
 CORE_SRX_TABLE_COLUMN_After_Break=Pattern After
 
 CORE_SRX_RULES_LANG_GERMAN=German
-
+CORE_SRX_RULES_LANG_CATALAN=Catalan
+CORE_SRX_RULES_LANG_SPANISH=Spanish
 CORE_SRX_RULES_LANG_RUSSIAN=Russian
-
 CORE_SRX_RULES_LANG_JAPANESE=Japanese
-
 CORE_SRX_RULES_LANG_ENGLISH=English
-
 CORE_SRX_RULES_LANG_DEFAULT=Default
-
 CORE_SRX_RULES_FORMATTING_TEXT=Text files segmentation
-
 CORE_SRX_RULES_FORMATTING_HTML=HTML and XHTML files segmentation
 
 
