@@ -899,17 +899,13 @@ CORE_SRX_TABLE_COLUMN_Before_Break=Masque avant
 CORE_SRX_TABLE_COLUMN_After_Break=Masque apr\u00e8s
 
 CORE_SRX_RULES_LANG_GERMAN=Allemand
-
+CORE_SRX_RULES_LANG_CATALAN=Catalan
+CORE_SRX_RULES_LANG_SPANISH=Espagnol
 CORE_SRX_RULES_LANG_RUSSIAN=Russe
-
 CORE_SRX_RULES_LANG_JAPANESE=Japonais
-
 CORE_SRX_RULES_LANG_ENGLISH=Anglais
-
 CORE_SRX_RULES_LANG_DEFAULT=Valeurs par d\u00e9faut
-
 CORE_SRX_RULES_FORMATTING_TEXT=R\u00e8gles pour fichiers textes
-
 CORE_SRX_RULES_FORMATTING_HTML=R\u00e8gles pour fichiers HTML et XHTML
 
 
